samples/_failures_safe/1761172246_c9de4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b797f2e3.c: In function ‘main’:
./samples/SAFE/__tmp_b797f2e3.c:150:25: error: missing terminating " character
  150 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_b797f2e3.c:150:9: error: expected expression at end of input
  150 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_b797f2e3.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b797f2e3.c:150:9: error: expected declaration or statement at end of input
